fixed body background color on tablets

--- a/css/dss_elc.css
+++ b/css/dss_elc.css
@@ -4558,11 +4558,6 @@ and (min-device-width : 768px)
 and (max-device-width : 1024px)
 and (orientation : landscape) {
 	
-	body {
-		
-		background-color:white;
-	}
-	
 	.view-loans .views-field.views-field-field-loan-shareholder {
     	
     	width: 160px !important;
@@ -4714,11 +4709,6 @@ and (orientation : portrait) {
 	#network-visualize {
 	
 		margin-left:-14px !important;
-	}
-	
-	body {
-		
-		background-color:white;
 	}
 	
 	.node-human .field-entries .field-items {
